# Halcyon

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  LEARNED.md  Makefile  README.md  THREAT_MODEL.md  brand.md  build_order_part4.md  build_order_part4_layer1_plan.md  build_order_part4_layer2_plan.md  halcyon_frontier_submission_copy.md  halcyon_whitepaper_v9.md  integration_architecture.md  thesispivot.md
crates/halcyon-quote/: Cargo.toml
crates/halcyon-quote/src/: autocall_hedged.rs  autocall_v2.rs  autocall_v2_e11.rs  autocall_v2_parity.rs  b_tensors.rs  capital_stack.rs  daily_ki_correction.rs  frozen_moments_3pt.rs  hedge_controller.rs  k12_correction.rs  lib.rs  m6r_recip.rs  nested_grids.rs  obs1_seed_tables.rs  worst_of_c1_fast.rs  worst_of_factored.rs
crates/halcyon-quote/src/insurance/: european_nig.rs  ewma.rs  settlement.rs
crates/halcyon-quote/src/pool/: exit.rs  invariant.rs  join.rs  swap.rs
crates/halcyon-quote/tests/: products_smoke.rs
crates/halcyon-wasm/: Cargo.toml
crates/halcyon-wasm/src/: lib.rs
crates/halcyon_client_sdk/: Cargo.toml
crates/halcyon_client_sdk/src/: aggregate_delta.rs  decode.rs  flagship_autocall.rs  il_protection.rs  kernel.rs  lib.rs  pda.rs  sol_autocall.rs  tx.rs
crates/halcyon_flagship_quote/: Cargo.toml
crates/halcyon_flagship_quote/src/: daily_ki_correction.rs  exact_leg_tables.rs  frozen_predict_tables.rs  k12_correction.rs  k9_correction.rs  lib.rs  midlife_pricer.rs  midlife_reference.rs  moment_tables.rs  nig_weights_lookup.rs  worst_of_c1_fast.rs  worst_of_c1_filter.rs  worst_of_c1_filter_gradients.rs  worst_of_c1_lookup.rs  worst_of_factored.rs
crates/halcyon_flagship_quote/tests/: midlife_parity.rs  midlife_parity_fixtures.rs
crates/halcyon_flagship_quote/tests/common/: mod.rs
crates/halcyon_flagship_quote/tests/fixtures/: midlife_nav_vectors.json
crates/halcyon_il_quote/: Cargo.toml
crates/halcyon_il_quote/src/: lib.rs  midlife.rs  product.rs
crates/halcyon_il_quote/src/insurance/: european_nig.rs  mod.rs  thresholds.rs
crates/halcyon_il_quote/src/pool/: single_exit.rs
crates/halcyon_il_quote/tests/: smoke.rs
crates/halcyon_oracles/: Cargo.toml
crates/halcyon_oracles/src/: errors.rs  lib.rs  mock.rs  pyth.rs  snapshot.rs
crates/halcyon_sol_autocall_quote/: Cargo.toml
crates/halcyon_sol_autocall_quote/src/: autocall_hedged.rs  autocall_v2.rs  autocall_v2_e11.rs  autocall_v2_parity.rs  lib.rs  midlife.rs  sol_swap_cost.rs
crates/halcyon_sol_autocall_quote/tests/: smoke.rs
keepers/delta_keeper/: Cargo.toml  README.md
keepers/delta_keeper/src/: main.rs
keepers/flagship_hedge_keeper/: Cargo.toml
keepers/flagship_hedge_keeper/src/: main.rs
keepers/hedge_keeper/: Cargo.toml
keepers/hedge_keeper/src/: main.rs
keepers/observation_keeper/: Cargo.toml
keepers/observation_keeper/src/: config.rs  main.rs  rpc.rs  scheduler.rs
keepers/price_relay/: Cargo.toml  README.md  package-lock.json  package.json
keepers/price_relay/config/: devnet.example.json
keepers/price_relay/src/: addresses.ts  cache.ts  index.ts  print_feed_addresses.rs
keepers/regime_keeper/: Cargo.toml
keepers/regime_keeper/src/: config.rs  lib.rs  main.rs  rpc.rs  scheduler.rs
programs/halcyon_flagship_autocall/: Cargo.toml
programs/halcyon_flagship_autocall/src/: buyback_math.rs  calendar.rs  errors.rs  lib.rs  midlife_pricing.rs  observation.rs  pricing.rs  state.rs
programs/halcyon_flagship_autocall/src/instructions/: accept_prepared_quote.rs  accept_quote.rs  advance_midlife_nav.rs  buyback.rs  buyback_from_checkpoint.rs  cancel_retail_redemption.rs  debug_midlife_nav.rs  execute_retail_redemption.rs  mod.rs  prepare_midlife_nav.rs  prepare_quote.rs  preview_lending_value.rs  preview_lending_value_from_checkpoint.rs  preview_quote.rs  reconcile_coupons.rs  record_autocall_observation.rs  record_coupon_observation.rs  record_ki_event.rs  request_retail_redemption.rs  settle.rs
programs/halcyon_il_protection/: Cargo.toml
programs/halcyon_il_protection/src/: errors.rs  lib.rs  pricing.rs  state.rs
programs/halcyon_il_protection/src/instructions/: accept_quote.rs  mod.rs  preview_lending_value.rs  preview_quote.rs  settle.rs
programs/halcyon_kernel/: Cargo.toml  LAYOUTS.md
programs/halcyon_kernel/src/: errors.rs  lib.rs
programs/halcyon_kernel/src/instructions/: mod.rs
programs/halcyon_kernel/src/state/: aggregate_delta.rs  autocall_schedule.rs  coupon_schedule.rs  coupon_vault.rs  fee_ledger.rs  hedge_book.rs  hedge_sleeve.rs  junior.rs  keeper_registry.rs  lookup_table_registry.rs  mod.rs  pending_hedge_swap.rs  policy.rs  product_registry.rs  protocol_config.rs  regime_signal.rs  regression.rs  senior.rs  vault_sigma.rs  vault_state.rs
programs/halcyon_sol_autocall/: Cargo.toml
programs/halcyon_sol_autocall/src/: errors.rs  lib.rs  pricing.rs  state.rs
programs/halcyon_sol_autocall/src/instructions/: accept_quote.rs  mod.rs  preview_lending_value.rs  preview_quote.rs  record_observation.rs  settle.rs  write_midlife_matrices.rs  write_reduced_operators.rs
research/programs/halcyon_lending_consumer/: Cargo.toml
research/programs/halcyon_lending_consumer/src/: lib.rs
research/programs/halcyon_stub_product/: Cargo.toml
research/programs/halcyon_stub_product/src/: lib.rs
tools/halcyon_cli/: Cargo.toml
tools/halcyon_cli/src/: client.rs  main.rs
tools/halcyon_cli/src/commands/: buy.rs  buy_flagship.rs  buy_il.rs  buyback_flagship.rs  cancel_retail_redemption.rs  defund_hedge_sleeve.rs  execute_retail_redemption.rs  fund_coupon_vault.rs  fund_hedge_sleeve.rs  init_payment_mint.rs  init_protocol.rs  keepers.rs  liquidate_wrapped_flagship.rs  migrate_protocol_config.rs  mod.rs  preview.rs  preview_flagship.rs  preview_il.rs  preview_lending_value.rs  regime_status.rs  register.rs  register_flagship_autocall.rs  register_il_protection.rs  request_retail_redemption.rs  rotate_keeper.rs  seed_junior.rs  senior_deposit.rs  set_protocol_config.rs  settle.rs  settle_il.rs  status.rs  sweep_fees.rs  transfer_policy_owner.rs  unwrap_policy_receipt.rs  update_ewma.rs  (+1 more)
(+430 files in other folders)
