[workspace]
members = ["crates/halcyon-quote", "crates/halcyon-wasm", "solmath-core"]
default-members = ["crates/halcyon-quote"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
