[package]
name = "hedge_keeper"
version = "0.1.0"
edition = "2021"
description = "SOL Autocall hedge keeper."

[[bin]]
name = "hedge_keeper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
solana-sdk = "=2.3.1"
solana-rpc-client = "=2.3.1"
solana-rpc-client-api = "=2.3.1"
solana-account-decoder = "=2.3.1"
solana-address-lookup-table-interface = { version = "=2.2.2", features = ["bincode", "bytemuck"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22.1"
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
pyth-solana-receiver-sdk = "=1.1.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
spl-associated-token-account = "=7.0.0"
spl-token = "=8.0.0"
halcyon_client_sdk = { path = "../../crates/halcyon_client_sdk" }
halcyon_kernel = { path = "../../programs/halcyon_kernel", features = ["cpi"] }
halcyon_sol_autocall = { path = "../../programs/halcyon_sol_autocall", features = ["cpi"] }
halcyon_sol_autocall_quote = { path = "../../crates/halcyon_sol_autocall_quote" }
halcyon_oracles = { path = "../../crates/halcyon_oracles" }
