[package]
name = "halcyon_il_protection"
version = "0.1.0"
edition = "2021"
description = "IL Protection product program on SOL/USDC. Handlers land in L3."

[lib]
crate-type = ["cdylib", "lib"]
name = "halcyon_il_protection"

[features]
default = ["pyth-pull"]
pyth-pull = ["halcyon_kernel/pyth-pull", "halcyon_oracles/pyth-pull"]
mock-pyth = ["halcyon_kernel/mock-pyth", "halcyon_oracles/mock-pyth"]
integration-test = ["mock-pyth"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "halcyon_common/idl-build",
    "halcyon_kernel/idl-build",
    "halcyon_oracles/idl-build",
]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = "=0.32.1"
halcyon_common = { path = "../../crates/halcyon_common" }
halcyon_il_quote = { path = "../../crates/halcyon_il_quote" }
halcyon_kernel = { path = "../halcyon_kernel", default-features = false, features = ["cpi"] }
halcyon_oracles = { path = "../../crates/halcyon_oracles", default-features = false }
solana-sha256-hasher = "=2.3.0"
solmath-core = { path = "../../solmath-core" }
