[package]
name = "halcyon_kernel"
version = "0.1.0"
edition = "2021"
description = "Halcyon kernel program — money, reserves, tranches, policy lifecycle."

[lib]
crate-type = ["cdylib", "lib"]
name = "halcyon_kernel"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "halcyon_common/idl-build"]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = "=0.32.1"
halcyon_common = { path = "../../crates/halcyon_common" }
halcyon_oracles = { path = "../../crates/halcyon_oracles" }
solmath-core = { path = "../../solmath-core" }
# SHA-256 for K1+K2 terms_hash rehash. anchor-lang 0.32.1 dropped the
# `solana_program::hash` re-export, so we depend on solana-sha256-hasher
# directly. Version pinned to match the solana-hash in the existing
# transitive graph (2.3.x).
solana-sha256-hasher = "=2.3.0"
