[package]
name = "halcyon_cli"
version = "0.1.0"
edition = "2021"
description = "Operator CLI for Halcyon — admin bring-up, capital, preview, buy, settle, keeper force-firing, state dump."

[[bin]]
name = "halcyon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
solana-sdk = "=2.3.1"
solana-rpc-client = "=2.3.1"
solana-rpc-client-api = "=2.3.1"
solana-account-decoder = "=2.3.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
halcyon_client_sdk = { path = "../../crates/halcyon_client_sdk" }
halcyon_flagship_autocall = { path = "../../programs/halcyon_flagship_autocall", features = ["cpi"] }
halcyon_il_protection = { path = "../../programs/halcyon_il_protection", features = ["cpi"] }
halcyon_il_quote = { path = "../../crates/halcyon_il_quote" }
halcyon_kernel = { path = "../../programs/halcyon_kernel", features = ["cpi"] }
halcyon_sol_autocall_quote = { path = "../../crates/halcyon_sol_autocall_quote" }
halcyon_sol_autocall = { path = "../../programs/halcyon_sol_autocall", features = ["cpi"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
