[package]
name = "halcyon_lending_consumer"
version = "0.1.0"
edition = "2021"
description = "Reference lending-consumer program that liquidates a Flagship policy through the issuer buyback path."

[lib]
crate-type = ["cdylib", "lib"]
name = "halcyon_lending_consumer"

[features]
default = ["pyth-pull"]
pyth-pull = ["halcyon_flagship_autocall/pyth-pull"]
mock-pyth = ["halcyon_flagship_autocall/mock-pyth"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "halcyon_common/idl-build",
    "halcyon_flagship_autocall/idl-build",
    "halcyon_kernel/idl-build",
]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = "=0.32.1"
halcyon_common = { path = "../../../crates/halcyon_common" }
halcyon_flagship_autocall = { path = "../../../programs/halcyon_flagship_autocall", default-features = false, features = ["cpi", "pyth-pull"] }
halcyon_kernel = { path = "../../../programs/halcyon_kernel", default-features = false, features = ["cpi", "pyth-pull"] }
