[package]
name = "halcyon_stub_product"
version = "0.1.0"
edition = "2021"
description = "L1-only stub product under research/. Kept in the workspace so kernel tests can exercise the mutual-CPI seam; not deployed to devnet."

[lib]
crate-type = ["cdylib", "lib"]
name = "halcyon_stub_product"

[features]
# L3-M3 — `localnet-override` enables the `vault_deposit_amount_override`
# escape hatch that the localnet anchor tests use to drive the kernel's
# VaultDepositBelowPremiumPortion / PolicyEscrowInsufficient paths. It is
# ON by default so `anchor test` continues to work without extra flags;
# release/CI builds that deploy the stub binary (shouldn't happen — the
# stub is already denied at register_product via the mainnet-guards
# feature) must pass `--no-default-features` to compile the stub with the
# override gone from its on-chain ABI.
default = ["localnet-override"]
integration-test = []
localnet-override = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "halcyon_common/idl-build", "halcyon_kernel/idl-build"]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = "=0.32.1"
halcyon_common = { path = "../../../crates/halcyon_common" }
halcyon_kernel = { path = "../../../programs/halcyon_kernel", default-features = false, features = ["cpi", "pyth-pull"] }
solana-sha256-hasher = "=2.3.0"
